<resources>

    <string name="facebook_app_id">1761146647505669</string>
    <string name="app_name">Boo</string>
    <string name="splash_description">Boo is a fun way to share your daily frustrations\nwith other people around the world.</string>
    <string name="splash_bottom_txt">See something you dont like?\nJust boo it.</string>
    <string name="sign_up">Sign Up</string>
    <string name="fb_login">Facebook</string>
    <string name="twitter_login">Twitter</string>
    <string name="email_login">Email</string>
    <string name="login_with">Login with ...</string>
    <string name="page_content">Take a photo of a car parked in a disabled bay, #hashtag your local airline for 3 hours delay or share an article about something that made you mad. It is better to share your frustration with other people who feel the same like you!</string>
    <string name="login">Login</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_about">About</string>
    <string name="settings">Settings</string>
    <string name="notification">Push Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home_header">What\'s bugging you today?</string>
    <string name="text_btn">Write it</string>
    <string name="photo_btn">Show it</string>
    <string name="place_btn">Find it</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="activity">Activity</string>
    <string name="bootique">Bootique</string>
    <string name="name">Christina Booed</string>
    <string name="boo_too">Boo-Too</string>
    <string name="boo_too_count">Boo-Too (%d)</string>
    <string name="comment">Comment</string>
    <string name="comment_count">Comment (%d)</string>
    <string name="share">Share</string>
    <string name="content">Lorem ipsum dolor sit amet consectetur adipicscin elit. Integer nec odio.</string>
    <string name="post_time">2h</string>
    <string name="most_booed">MOST BOOED</string>
    <string name="near_you">NEAR YOU</string>
    <string name="global">GLOBALLY</string>
    <string name="recent_activity">RECENT ACTIVITY</string>
    <string name="recent_activity_subject">%s.</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="sign_up_username">Username</string>
    <string name="comments">Comments</string>
    <string name="comment_hint">Add a comment...</string>
    <string name="action_save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="search">Search</string>
    <string name="post_to_boo">Post to Boo</string>
    <string name="post_hint">What\'s bugging you today?</string>
    <string name="share_post">Share to Boo</string>
    <string name="share_hint">Write your comment...</string>
    <string name="search_places_hint">Search for places...</string>
    <string name="place">Place</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="about">About</string>
    <string name="about_page_content">Lorem ipsum dolor sit amet consectetur adipicscin elit. Integer nec odio. Lorem ipsum dolor sit amet consectetur adipicscin elit. Integer nec odio. Lorem ipsum dolor sit amet consectetur adipicscin elit. Integer nec odio.</string>
    <string name="edit_location_hint">Your location</string>
    <string name="edit_description_hint">Something about you</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take a photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="follow">Follow</string>
    <string name="please_wait">Please wait...</string>
    <string name="goes_wrong">Something went wrong</string>
    <string name="server_error">Server error</string>
    <string name="check_internet_connection">Please check internet connection</string>
    <string name="undefined_error">Undefined error</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="fill_field">Please fill field</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="post_empty">Describe what you are booing at</string>
</resources>
