<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/basic_screens_side_margin"
    android:paddingRight="@dimen/basic_screens_side_margin">

    <EditText
        android:id="@+id/old_password"
        style="@style/BlackRegularFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_gray_login_password_18dp"
        android:drawablePadding="@dimen/login_drawable_padding"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorGrayText" />


    <EditText
        android:id="@+id/new_password"
        style="@style/BlackRegularFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_gray_login_password_18dp"
        android:drawablePadding="@dimen/login_drawable_padding"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorGrayText" />

    <EditText
        android:id="@+id/confirm_new_password"
        style="@style/BlackRegularFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_gray_login_password_18dp"
        android:drawablePadding="@dimen/login_drawable_padding"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/colorGrayText" />


</LinearLayout>