<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_above="@+id/buttons_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:src="@drawable/ic_logo_white" />

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/login_side_margin"
            android:layout_marginRight="@dimen/login_side_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/login_with"
                android:textAppearance="@style/TextAppearance.FontPath" />

            <RelativeLayout
                android:id="@+id/login_fb_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_fb_button"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fb_login"
                    android:textAppearance="@style/TextAppearance.FontPath" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_login_fb" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_twitter_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="@dimen/login_margin_buttons"
                android:background="@drawable/login_twitter_button"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/twitter_login"
                    android:textAppearance="@style/TextAppearance.FontPath" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/login_button_image_margin"
                    android:src="@drawable/ic_login_twitter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/log_in_email_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="@dimen/login_margin_buttons"
                android:background="@drawable/login_email_button"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/email_login"
                    android:textAppearance="@style/TextAppearance.FontPath" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/login_button_image_margin"
                    android:src="@drawable/ic_login_email" />
            </RelativeLayout>


            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/sign_up_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.FontPath" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
