<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EmailLoginActivity">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/transparent_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_view"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/login_logo_top_margin"
                    android:src="@drawable/ic_logo_white" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/fields_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_side_margin"
                    android:layout_marginRight="@dimen/login_side_margin"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/login_username"
                        style="@style/TextAppearance.FontPath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_login_username_18dp"
                        android:drawablePadding="@dimen/login_drawable_padding"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColorHint="@android:color/white" />

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/TextAppearance.FontPath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_login_password_18dp"
                        android:drawablePadding="@dimen/login_drawable_padding"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColorHint="@android:color/white" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_height"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_email_button"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.FontPath" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>