<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_toolbar_logo" />

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/home_screen_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_menu"
            android:layout_below="@+id/toolbar">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/home_menu_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_menu_home"
                    android:layout_width="@dimen/bottom_menu_icon_size"
                    android:layout_height="@dimen/bottom_menu_icon_size"
                    android:src="@drawable/ic_menu_home_32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textAppearance="@style/GrayRegularFont"
                    android:textColor="@color/bottom_menu_item_color"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trending_menu_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_menu_trending"
                    android:layout_width="@dimen/bottom_menu_icon_size"
                    android:layout_height="@dimen/bottom_menu_icon_size"
                    android:src="@drawable/ic_trending_32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trending"
                    android:textAppearance="@style/GrayRegularFont"
                    android:textColor="@color/bottom_menu_item_color"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_menu_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_menu_activity"
                    android:layout_width="@dimen/bottom_menu_icon_size"
                    android:layout_height="@dimen/bottom_menu_icon_size"
                    android:src="@drawable/ic_menu_activity_32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity"
                    android:textAppearance="@style/GrayRegularFont"
                    android:textColor="@color/bottom_menu_item_color"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bootique_menu_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_menu_bootique"
                    android:layout_width="@dimen/bottom_menu_icon_size"
                    android:layout_height="@dimen/bottom_menu_icon_size"
                    android:src="@drawable/ic_bootique_32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bootique"
                    android:textAppearance="@style/GrayRegularFont"
                    android:textColor="@color/bottom_menu_item_color"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorNavDrawerBg"
        android:fitsSystemWindows="true"
        android:paddingTop="50dp"
        app:itemBackground="@drawable/nav_item"
        app:itemIconTint="@color/nav_menu_item_color"
        app:itemTextAppearance="@style/NavMenuItemText"
        app:itemTextColor="@color/nav_menu_item_color"
        app:menu="@menu/activity_main_drawer" />


</android.support.v4.widget.DrawerLayout>